[gd_scene load_steps=14 format=3 uid="uid://cl22my813xjis"]

[ext_resource type="Script" uid="uid://qvw5sxx3exu2" path="res://scenes/main_scene.gd" id="1_pkn42"]
[ext_resource type="Texture2D" uid="uid://c6q25fvs28u46" path="res://gane_assets/art/back_pic/parallax_ground_1.png" id="2_0f5b0"]
[ext_resource type="Texture2D" uid="uid://cxgnmpwvqeyge" path="res://gane_assets/art/front_pic/ground.png" id="2_ujykm"]
[ext_resource type="Texture2D" uid="uid://dtec3dnwnlg7s" path="res://gane_assets/art/back_pic/mountain_1.png" id="3_dujm8"]
[ext_resource type="PackedScene" uid="uid://dx3ifleapc2nw" path="res://scenes/player.tscn" id="3_ujykm"]
[ext_resource type="Texture2D" uid="uid://qe51ylp0qjcy" path="res://gane_assets/art/back_pic/forest_shadow.png" id="4_7d12v"]
[ext_resource type="PackedScene" uid="uid://cblbvmecsh7eh" path="res://scenes/building/box.tscn" id="5_b6kwy"]
[ext_resource type="Texture2D" uid="uid://dvkqxi4m7xqu0" path="res://gane_assets/art/back_pic/tree_1.png" id="5_sojf6"]
[ext_resource type="PackedScene" uid="uid://pomkjln67fbm" path="res://scenes/ui.tscn" id="10_0ccap"]
[ext_resource type="Script" uid="uid://cqvwvfyvgxsd" path="res://scenes/command_window.gd" id="11_e1cbu"]
[ext_resource type="PackedScene" uid="uid://bs3ye1a1n0bh0" path="res://scenes/enemies/scarecrow.tscn" id="14_0f5b0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujykm"]
size = Vector2(1000, 200)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0f5b0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pkn42")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Parallax2D_0" type="Parallax2D" parent="ParallaxBackground"]
scroll_scale = Vector2(1.5, 1.5)
scroll_offset = Vector2(0, 660)
repeat_size = Vector2(1408, 0)
repeat_times = 9

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Parallax2D_0"]
texture = ExtResource("2_0f5b0")

[node name="Parallax2D_1" type="Parallax2D" parent="ParallaxBackground"]
scroll_scale = Vector2(1.3, 1.3)
scroll_offset = Vector2(0, 330)
repeat_times = 3

[node name="Mountain1" type="Sprite2D" parent="ParallaxBackground/Parallax2D_1"]
texture = ExtResource("3_dujm8")

[node name="Parallax2D" type="Parallax2D" parent="ParallaxBackground"]
scroll_offset = Vector2(0, 330)
repeat_size = Vector2(1200, 0)

[node name="ForestShadow" type="Sprite2D" parent="ParallaxBackground/Parallax2D"]
texture = ExtResource("4_7d12v")

[node name="Tree1" type="Sprite2D" parent="ParallaxBackground/Parallax2D"]
position = Vector2(1034, 784)
texture = ExtResource("5_sojf6")

[node name="ground" type="Node2D" parent="."]

[node name="ground" type="StaticBody2D" parent="ground"]
collision_layer = 4
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground/ground"]
position = Vector2(0, 1300)
shape = SubResource("RectangleShape2D_ujykm")

[node name="floor_0" type="Node2D" parent="ground"]
visible = false
position = Vector2(959, 1200)

[node name="ColorRect" type="ColorRect" parent="ground/floor_0"]
offset_left = -962.0
offset_top = -26.0
offset_right = 971.0
offset_bottom = 141.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Ground" type="Sprite2D" parent="ground/floor_0"]
scale = Vector2(1.38423, 1.60769)
texture = ExtResource("2_ujykm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(958, 647)

[node name="player" parent="." instance=ExtResource("3_ujykm")]
material = SubResource("CanvasItemMaterial_0f5b0")
position = Vector2(958, 647)

[node name="控制相机" type="RemoteTransform2D" parent="player"]
remote_path = NodePath("../../Camera2D")

[node name="Box" parent="." instance=ExtResource("5_b6kwy")]
position = Vector2(1425, 868)

[node name="timernode" type="Node" parent="."]

[node name="Timer" type="Timer" parent="timernode"]
autostart = true

[node name="草人" parent="." instance=ExtResource("14_0f5b0")]
position = Vector2(1230, 789)
collision_layer = 8
collision_mask = 4

[node name="enemy and bullets" type="Node2D" parent="."]

[node name="UI_layer" type="CanvasLayer" parent="."]

[node name="UI" parent="UI_layer" instance=ExtResource("10_0ccap")]

[node name="CommandWindow" type="Control" parent="UI_layer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_e1cbu")

[node name="LineEdit" type="LineEdit" parent="UI_layer/CommandWindow"]
layout_mode = 0
offset_left = 1.0
offset_top = 975.0
offset_right = 559.0
offset_bottom = 1027.0
placeholder_text = "command"
keep_editing_on_text_submit = true

[node name="console" type="PanelContainer" parent="UI_layer/CommandWindow"]
layout_mode = 0
offset_right = 559.0
offset_bottom = 974.0

[node name="RichTextLabel" type="RichTextLabel" parent="UI_layer/CommandWindow/console"]
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[connection signal="timeout" from="timernode/Timer" to="." method="_on_timer_timeout"]
